--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 <meta name="twitter:image" content="https://salimova.ml/images/marketing.jpg">
 <link rel="stylesheet" href="assets/css/main.css" />
 <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141219837-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141219837-1');
+</script>
+
 </head>
 <body class="is-preload">
 
