--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="15-16 июня 2019 пройдет форум косметологов Каникулы строгого режима- это новый проект, который даст возможность молодым специалистам косметологической отрасли познакомиться с друг другом, обменятся опытом и своими наработками, и конечно пообщаться в неформальной обстановке 
 ">
 <meta name="robots" content="index" ,"follow">
-<link rel="amphtml" href="https://salimova.ml/amp/amp_index.html">
+<1--<link rel="amphtml" href="https://salimova.ml/amp/amp_index.html">-->
 <meta property="og:title" content="15-16 июня 2019 пройдет форум косметологов Каникулы строгого режима- это новый проект, который даст возможность молодым специалистам косметологической отрасли познакомиться с друг другом, обменятся опытом и своими наработками, и конечно пообщаться в неформальной обстановке 
 ">
 <meta property="og:description" content="15-16 июня 2019 пройдет форум косметологов Каникулы строгого режима- это новый проект, который даст возможность молодым специалистам косметологической отрасли познакомиться с друг другом, обменятся опытом и своими наработками, и конечно пообщаться в неформальной обстановке 
