--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 <nav>
 <ul>
 <li><a href="#intro">Home</a></li>
-<li><a href="#one">Организаторы</a></li>
-<li><a href="#two">Who I Am</a></li>
-<li><a href="#work">My Work</a></li>
+<li><a href="#one">What </a></li>
+<li><a href="#three">Sponsor</a></li>
+<li><a href="#work">Program</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
