--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <ul>
 <li><a href="#intro">Home</a></li>
 <li><a href="#one">What </a></li>
-<li><a href="#three">Sponsor</a></li>
+<li><a href="#contact">Sponsor</a></li>
 <li><a href="#work">Program</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
@@ -575,8 +575,8 @@ Wi-Fi предоставляется в зонах общего пользова
 <section id="contact" class="main style3 secondary">
 <div class="content">
 <header>
-<h2>Say Hello.</h2>
-<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+<h2>Остались вопросы!?</h2>
+<p>Свяжитесь с нами удобным длая Вас способом и наша команда, даст ответ на них, как по вопросам участия ф форуме, так и размещению в Отеле Del Mare </p>
 </header>
 <div class="box">
 <form method="post" action="#">
@@ -597,6 +597,10 @@ Wi-Fi предоставляется в зонах общего пользова
 </ul>
 </form>
 </div>
+<header>
+<h2>До встречи на Каникулах строгого режима!</h2>
+
+</header>
 </div>
 </section>
 
