--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <li><a href="#intro">Home</a></li>
 <li><a href="#one">What </a></li>
 <li><a href="#contact">Sponsor</a></li>
-<li><a href="#work">Program</a></li>
+<li><a href="#workspikers">Program</a></li>
 <li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
