--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <li><a href="#one">What </a></li>
 <li><a href="#contact">Sponsor</a></li>
 <li><a href="#workspikers">Program</a></li>
-<li><a href="#contact">Contact</a></li>
+<li><a href="#contact2">Contact</a></li>
 </ul>
 </nav>
 </header>
@@ -572,7 +572,7 @@ Wi-Fi предоставляется в зонах общего пользова
 </section>-->
 
 <!-- Contact -->
-<section id="contact" class="main style3 secondary">
+<section id="contact2" class="main style3 secondary">
 <div class="content">
 <header>
 <h2>Остались вопросы!?</h2>
