--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   gtag('config', 'UA-141219837-1');
 </script>
-
+<meta name="yandex-verification" content="38d988ab089550ad" />
 </head>
 <body class="is-preload">
 
