--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ Wi-Fi предоставляется в зонах общего пользова
 <div class="content">
 <header>
 <h2>Остались вопросы!?</h2>
-<p>Свяжитесь с нами удобным длая Вас способом и наша команда, даст ответ на них, как по вопросам участия ф форуме, так и размещению в Отеле Del Mare </p>
+<p>Свяжитесь с нами удобным для Вас способом и наша команда, даст ответ на них, как по вопросам участия в форуме, так и размещению в Отеле Del Mare </p>
 </header>
 <div class="box">
 <form method="post" action="#">
