--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Wi-Fi предоставляется в зонах общего пользова
 </header>
 <div class="box">
 <ul class="actions special">
-<li><a href="https://www.youtube.com/channel/UC4tR0Mx_piy38Nhu-Cjrkvg"><input type="button"  value="ПОДРОБНЕЕ" /> </a></li>
+<li><a href="http://beautycode.club/social/"><input type="button"  value="ПОДРОБНЕЕ" /> </a></li>
 </ul>
 </div>
 </div>
@@ -619,7 +619,7 @@ Wi-Fi предоставляется в зонах общего пользова
 
 <!-- Menu -->
 <ul class="menu">
-<li>&copy; Все права защищены</li><li>Разработка и продвижение: <a href="">Рекламное агенство</a></li>
+<li>&copy; Все права защищены</li><li>Разработка и продвижение: <a href="https://wfseo.tk">Интернет агенство WF</a></li>
 </ul>
 
 </footer>
