--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <h2>Каникулы строгого режима </h2>
 </header>
 <p>в честь Дня медицинского работника <strong>15-16 июня</strong> Meeting of Cosmetology <a href="http://delmarehotel.com">Отель DEL MARE</a><br />
-Капчагай, мкр. 19, ул. Алмагуль, 33<a href="https://html5up.net/license">Creative Commons Attribution license</a></p>
+Капчагай, мкр. 19, ул. Алмагуль, 33<a href="#"></a></p>
 <footer>
 <a href="#one" class="button style2 down">More</a>
 </footer>
@@ -149,7 +149,7 @@
 <a href="https://www.facebook.com/saalmaty" class="image fit"><img src="images/logo02.jpg" title="МЕДИЦИНСКАЯ АКАДЕМИЯ ПОСЛЕДИПЛОМНОГО ОБРАЗОВАНИЯ" alt="МЕДИЦИНСКАЯ АКАДЕМИЯ ПОСЛЕДИПЛОМНОГО ОБРАЗОВАНИЯ" /></a>
 </div>
 <div class="field half">
-<a href="https://www.facebook.com/saalmaty" class="image fit"><img src="images/logo03.jpg" title="Дерматологический центр S0S" alt="Дерматологический центр S0S" /></a>
+<a href="http://dermatology.kz" class="image fit"><img src="images/logo03.jpg" title="Дерматологический центр S0S" alt="Дерматологический центр S0S" /></a>
 </div>
 <div class="field half">
 <a href="http://delmarehotel.com" class="image fit"><img src="images/logo04.png" title="Отель Del Mare" alt="Отель Del Mare" /></a>
