--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <a href="https://www.facebook.com/saalmaty" class="image fit"><img src="images/logo02.jpg" title="МЕДИЦИНСКАЯ АКАДЕМИЯ ПОСЛЕДИПЛОМНОГО ОБРАЗОВАНИЯ" alt="МЕДИЦИНСКАЯ АКАДЕМИЯ ПОСЛЕДИПЛОМНОГО ОБРАЗОВАНИЯ" /></a>
 </div>
 <div class="field half">
-<a href="http://dermatology.kz" class="image fit"><img src="images/logo03.jpg" title="Дерматологический центр S0S" alt="Дерматологический центр S0S" /></a>
+<a href="http://dermatology.kz" class="image fit"><img src="images/logo03.png" title="Дерматологический центр S0S" alt="Дерматологический центр S0S" /></a>
 </div>
 <div class="field half">
 <a href="http://delmarehotel.com" class="image fit"><img src="images/logo04.png" title="Отель Del Mare" alt="Отель Del Mare" /></a>
