--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@ arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
 <section id="work1" class="main style3 primary">
 <div class="content">
 <header>
-<h2>ДОБРО ПОЖАЛОВАТЬ В ОТЕЛЬ DEL MARE</h2>
+  <h2>ДОБРО ПОЖАЛОВАТЬ В ОТЕЛЬ DEL MARE</br>
+  НА ФОРУМ КОСМЕТОЛОГОВ</br>
+  <span class="kanik">КАНИКУЛЫ СТРОГОГО РЕЖИМА</span></h2>
 <p><strong>Окунитесь в атмосферу комфорта и уюта отеля!</strong><br/>
 От отеля до центра Капчагая можно дойти пешком за 30 минут,а до пляжа можно всего за 3 минуты. <br/>
 Отель Del Mare  предлагает комфортабельные номера: 2х местный стандарт, 4х местный семейный, VIP 4х местный с которых открыватся вид на террасу. <br/>
