--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ Wi-Fi предоставляется в зонах общего пользова
 <p><span class="red">Журнал Beauty Code</span> был основан в 2015 году, как профессиональное издание для врачей косметологов, врачей дерматологов, косметологов эстетистов, руководителей клиник и салонов красоты.</p>
 <p><span class="red">На страницах журнала</span> информация о последних достижениях в области эстетической медицины и косметологии, дерматологии и трихологии; новейшие технологии в инъекционной и аппаратной косметологии; практические мастер-классы.</p>
 <p><span class="red">Миссия журнала</span> сформировать свою постоянную целевую аудиторию как среди начинающих косметологов, так и профессионалов.</p>
-<p>Организатор косметологической выставки BEAUTY TREND
-<span class="red">Выставка Beauty Trend</span> - профильное мероприятие только для специалистов эстетической медицины, никаких посторонних лиц на выставочной площадке</p>
+<p>Организатор косметологической выставки 
+<span class="red">Beauty Trend</span> - профильное мероприятие только для специалистов эстетической медицины, никаких посторонних лиц на выставочной площадке</p>
 </header>
 <div class="box">
 <ul class="actions special">
@@ -336,8 +336,8 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <article class="from-right">
 <p class="forumdata">13.00-14.00 – Перерыв - фуршет</p>
-<h3>Начало пьянки</h3>
-<p class="forumall">Шампанское
+<h3></h3>
+<p class="forumall">
 </p>
 </article>
 <!-- 14.00-14.30 -->
@@ -386,7 +386,7 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <article class="from-right">
 <p class="forumdata">18.00-18.30 – Обсуждение.</p>
-<h3>Драка</h3>
+<h3></h3>
 <p class="forumall"></p>
 </article>
 <!-- 19.00  -->
@@ -413,8 +413,8 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <article class="from-right">
 <p class="forumdata">09.00-11.00  – Завтрак</p>
-<h3>Опохмелка</h3>
-<p class="forumall">расол, пиво, водка</p>
+<h3></h3>
+<p class="forumall"></p>
 </article>
 <!-- 11.00-11.30 -->
 <article class="from-left">
@@ -458,7 +458,7 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <article class="from-right">
 <p class="forumdata">13.00-13.30 – Перерыв/Обсуждение</p>
-<h3>Терки</h3>
+<h3></h3>
 <p class="forumall">
 </p>
 </article>
@@ -505,7 +505,7 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <article class="from-right">
 <p class="forumdata">17.30-18.00 – Вручение сертификатов, фотосессия.</p>
-<h3>сертификат это сила</h3>
+<h3></h3>
 <p class="forumall"></p>
 </article>
 <!-- 18.00-->
@@ -514,8 +514,8 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <article class="from-right">
 <p class="forumdata">18.00 – Трансфер: Капчагай – Алматы</p>
-<h3>Земля прощай</h3>
-<p class="forumall">участников</p>
+<h3></h3>
+<p class="forumall"></p>
 </article>
 </div>
 </div>
