--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Wi-Fi предоставляется в зонах общего пользова
 <div class="content">
 <header>
 <h2>ПРОГРАММА ФОРУМА КОСМЕТОЛОГОВ</h2>
-<p>Форум косметологов Каникулы строгого режима- это новый проект, который даст возможность молодым специалистам косметологической отрасли познакомиться с друг другом, обменятся опытом и своими наработками, и конечно пообщаться в неформальной обстановке </p>
+<p>Форум косметологов Каникулы строгого режима- это новый проект, который даст возможность молодым специалистам косметологической отрасли познакомиться с друг другом, обменяться опытом и своими наработками, и конечно пообщаться в неформальной обстановке </p>
 </header>
 <header>
 <h2>Программа форума на 15 июня</h2>
