--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:description" content="15-16 июня 2019 пройдет форум косметологов Каникулы строгого режима- это новый проект, который даст возможность молодым специалистам косметологической отрасли познакомиться с друг другом, обменятся опытом и своими наработками, и конечно пообщаться в неформальной обстановке 
 ">
 <meta property="og:image" content="https://salimova.ml/images/marketing.jpg">
-<meta property="og:url" content="https://salimova.ml/index.html">
+<meta property="og:url" content="https://salimova.ml">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="Каникулы строгого режима- форум косметологов">
 <meta name="twitter:title" content="15-16 июня Форум косметологов Каникулы строгого режима Капчагай Отель Del Mare">
