--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <!-- 14.30-15.00 -->
 <article class="from-left">
-<a href="images/fulls/ospanova_big.jpg" class="image fit"><img src="images/thumbs/ospanova.jpg" title="" alt="" /></a>
+<a href="images/fulls/luba_big.jpg" class="image fit"><img src="images/thumbs/luba.jpg" title="Приходько Любовь" alt="Приходько Любовь" /></a>
 </article>
 <article class="from-right">
 <p class="forumdata">14.30-15.00 – BYAS – современные технологий красоты. </p>
-<h3>Приходько Л. А.</h3>
-<p class="forumall">дерматокосметолог, Алматы,</p>
+<h3>Приходько Любовь</h3>
+<p class="forumall">Дерматокосметолог, Алматы,</p>
 </article>
 <!-- 15.00-17.30 -->
 <article class="from-left">
