--- a/index.html
+++ b/index.html
@@ -464,12 +464,12 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <!-- 13.30-14.00 -->
 <article class="from-left">
-<a href="images/fulls/ospanova_big.jpg" class="image fit"><img src="images/thumbs/ospanova.jpg" title="" alt="" /></a>
+<a href="images/fulls/luba_big.jpg" class="image fit"><img src="images/thumbs/luba.jpg" title="Приходько Любовь" alt="Приходько Любовь" /></a>
 </article>
 <article class="from-right">
 <p class="forumdata">13.30-14.00 – Обмен опытом: безыгольное и безболезненное  увеличение губ Pushuppen. </p>
-<h3>Приходько Л. А.</h3>
-<p class="forumall">дерматокосметолог, Алматы</p>
+<h3>Приходько Любовь</h3>
+<p class="forumall">Дерматокосметолог, Алматы</p>
 </article>
 <!-- 14.00-14.30 -->
 <article class="from-left">
