--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <article class="from-right">
 <p class="forumdata">11.30-11.50 – Психодерматология: информированность, знание и отношение дерматокосметологов РК.</p>
-<h3>Маркабаева А. А.</h3>
+<h3>Маркабаева Асель</h3>
 <p class="forumall">м. м. н., дерматокосметолог МЦ «Дарус»</p>
 </article>
 <!-- 11.50-12.00  -->
@@ -307,8 +307,8 @@ Wi-Fi предоставляется в зонах общего пользова
 <article class="from-right">
 <p class="forumdata">11.50-12.00 – SPF/PPD: Uriage - Bariesan, SVR- Sun Secure.
 </p>
-<h3>Козырева Н. П.</h3>
-<p class="forumall">тренинг-менеджер продукции  Uriage & SVR, компания «Фармалайн», Алматы</p>
+<h3>Козырева Наталья</h3>
+<p class="forumall">Тренинг-менеджер продукции  Uriage & SVR, компания «Фармалайн», Алматы</p>
 </article>
 <!-- 12.00-12.30  -->
 <article class="from-left">
