--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ Wi-Fi предоставляется в зонах общего пользова
 </article>
 <!-- 18.00-18.30 -->
 <article class="from-left">
-<a href="images/fulls/ospanova_big.jpg" class="image fit"><img src="images/thumbs/ospanova.jpg" title="" alt="" /></a>
+<a href="images/fulls/obs_big.jpg" class="image fit"><img src="images/thumbs/obs.jpg" title="Обсуждение" alt="Обсуждение" /></a>
 </article>
 <article class="from-right">
 <p class="forumdata">18.00-18.30 – Обсуждение.</p>
