--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ Wi-Fi предоставляется в зонах общего пользова
 <!-- Icons -->
 <ul class="icons">
 <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-<li><a href="https://www.facebook.com/Косметолог-Асель-Салимова-825471884488411/?view_public_for=825471884488411" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+<li><a href="https://www.facebook.com/dr.salimova.cosmetologist/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 <li><a href="https://www.instagram.com/dr.salimova.cosmetologist/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 <li><a href="https://skin-care-clinic-1685.business.site" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 <li><a href="https://www.youtube.com/channel/UC4tR0Mx_piy38Nhu-Cjrkvg" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
