--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <section id="intro" class="main style1 dark fullscreen">
 <div class="content">
 <header>
-<h2>Каникулы строгого режима </h2>
+<h2 class="orange">Каникулы строгого режима </h2>
 </header>
 <p>в честь Дня медицинского работника <strong>15-16 июня</strong> Meeting of Cosmetology <a href="http://delmarehotel.com">Отель DEL MARE</a><br />
 Капчагай, мкр. 19, ул. Алмагуль, 33<a href="#"></a></p>
@@ -69,7 +69,7 @@
 <section id="one" class="main style2 right dark fullscreen">
 <div class="content box style2">
 <header>
-<h2>WHAT</h2>
+<h2 class="orange">WHAT</h2>
 </header>
 <p><strong>Форум косметологов КАНИКУЛЫ СТРОГОГО РЕЖИМА</strong> <br/>
 в честь Дня медицинского
@@ -97,7 +97,7 @@
 <section id="two" class="main style2 left dark fullscreen">
 <div class="content box style2">
 <header>
-<h2>WHERE</h2>
+<h2 class="orange">WHERE</h2>
 </header>
 <p><strong>ДОБРО ПОЖАЛОВАТЬ!</strong><br/>
 Наша команда с радостью встретит Вас и разместит в Отель DEL MARE.<br/>
@@ -119,7 +119,7 @@
 <section id="three" class="main style2 right dark fullscreen">
 <div class="content box style2">
 <header>
-<h2>HOW MUCH</h2>
+<h2 class="orange">HOW MUCH</h2>
 </header>
 <p><strong>Стоимость участия в форуме - 20 000 тг (2 дня)</strong><br/>
 Оплата за один день участия – не предусмотрена.<br/>
@@ -447,7 +447,7 @@ arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
 <section id="work1" class="main style3 primary">
 <div class="content">
 <header>
-  <h2>ДОБРО ПОЖАЛОВАТЬ В ОТЕЛЬ DEL MARE</br>
+  <h2 class="orange">ДОБРО ПОЖАЛОВАТЬ В ОТЕЛЬ DEL MARE</br>
   НА ФОРУМ КОСМЕТОЛОГОВ</br>
   <span class="kanik">КАНИКУЛЫ СТРОГОГО РЕЖИМА</span></h2>
 <p><strong>Окунитесь в атмосферу комфорта и уюта отеля!</strong><br/>
@@ -507,7 +507,7 @@ Wi-Fi предоставляется в зонах общего пользова
 <section id="contact1" class="main style3 secondary">
 <div class="content">
 <header>
-<h2>ИНФОРМАЦИОННАЯ ПОДДЕРЖКА ЖУРНАЛ BEAUTY CODE</h2>
+<h2 class="orange">ИНФОРМАЦИОННАЯ ПОДДЕРЖКА ЖУРНАЛ BEAUTY CODE</h2>
 <p><img class="image fit" src="images/journal.jpg"  title="Журнал Beauty Code" alt="Журнал Beauty Code" /></p>
 <p><span class="red">Журнал Beauty Code</span> был основан в 2015 году, как профессиональное издание для врачей косметологов, врачей дерматологов, косметологов эстетистов, руководителей клиник и салонов красоты.</p>
 <p><span class="red">На страницах журнала</span> информация о последних достижениях в области эстетической медицины и косметологии, дерматологии и трихологии; новейшие технологии в инъекционной и аппаратной косметологии; практические мастер-классы.</p>
