--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <section id="intro" class="main style1 dark fullscreen">
 <div class="content">
 <header>
-<h2 class="orange">Каникулы строгого режима </h2>
+<h2>Каникулы строгого режима </h2>
 </header>
 <p>в честь Дня медицинского работника <strong>15-16 июня</strong> Meeting of Cosmetology <a href="http://delmarehotel.com">Отель DEL MARE</a><br />
 Капчагай, мкр. 19, ул. Алмагуль, 33<a href="#"></a></p>
