--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
   <h2 class="orange">ДОБРО ПОЖАЛОВАТЬ В ОТЕЛЬ DEL MARE</br>
   НА ФОРУМ КОСМЕТОЛОГОВ</br>
   <span class="kanik">КАНИКУЛЫ СТРОГОГО РЕЖИМА</span></h2>
-<p><strong>Окунитесь в атмосферу комфорта и уюта отеля!</strong><br/>
+<p class="hotelall"><strong>Окунитесь в атмосферу комфорта и уюта отеля!</strong><br/>
 От отеля до центра Капчагая можно дойти пешком за 30 минут,а до пляжа можно всего за 3 минуты. <br/>
 Отель Del Mare  предлагает комфортабельные номера: 2х местный стандарт, 4х местный семейный, VIP 4х местный с которых открыватся вид на террасу. <br/>
 Каждый номер укомплектован необходимой современной мебелью, кондиционерами, душевыми кабинами и телевизорами с кабельным подключением.<br/>
