--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ Wi-Fi предоставляется в зонах общего пользова
 
 <!-- Menu -->
 <ul class="menu">
-<li>&copy; Все права защищены</li><li>Разработка и продвижение: <a href="https://wfseo.tk">Интернет агенство WF</a></li>
+<li>&copy; Все права защищены</li><li>Разработка и продвижение: <a href="https://wfseo.tk">Интернет агентство WF</a></li>
 </ul>
 
 </footer>
