--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <header>
 <h2>Каникулы строгого режима </h2>
 </header>
-<p>в честь Дня медицинского работника <strong>15-16 июня</strong> Meeting of Cosmetology <a href="http://delmarehotel.com">Отель DEL MARE</a><br />
+<p class="hotelall">в честь Дня медицинского работника <strong>15-16 июня</strong> Meeting of Cosmetology <a href="http://delmarehotel.com">Отель DEL MARE</a><br />
 Капчагай, мкр. 19, ул. Алмагуль, 33<a href="#"></a></p>
 <footer>
 <a href="#one" class="button style2 down">More</a>
