--- a/index.html
+++ b/index.html
@@ -587,12 +587,12 @@ Wi-Fi предоставляется в зонах общего пользова
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13781.900892433168!2d77.07893559681165!3d43.86735394726902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc89d92137d734691!2z0KDQtdGB0YLQvtGA0LDQvSBEZWwgTWFyZQ!5e0!3m2!1sru!2skz!4v1559367829809!5m2!1sru!2skz" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 <div class="fields">
-<div class="field half"><i class="icon fa-home"></i><strong>АДРЕС ОТЕЛЯ</strong></br>
+<div class="field half"><p><i class="icon fa-home"></i><strong>АДРЕС ОТЕЛЯ</strong></br>
 Отель расположен на побережье
-г. Капчагай, мкн. 19, ул. Алмагуль 35</div>
+  г. Капчагай, мкн. 19, ул. Алмагуль 35</p></div>
 <div class="field half"><i class="icon fa-whatsapp"></i><strong>ТЕЛЕФОНЫ</strong></br>
 +7 (701) 720-80-87</br>
-+7 (702) 742-24-51</br>
+  +7 (702) 742-24-51</br></p>
 </div>
 </div>
 <ul class="actions special">
